--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"
             rel="stylesheet"
         />
+           <!-- WOWJS -->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
         <title>Chat App</title>
     </head>
     <body>
