--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
                 type="text/javascript"
                 src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"
             ></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
         </div>
     </body>
 </html>
