--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
 
-        <title>Chat App</title>
+        <title>DKC App</title>
     </head>
     <body>
         <div id="root">
